--- a/style.css
+++ b/style.css
@@ -1,37 +1,38 @@
 /* Basic Style */
-body {
+.page {
     background-color: #f8f8f8;
     color: #333;
     font-family: Lato, sans-serif;
 }
-.aaa {
+.header {
     width: 500px;
     margin: 0 auto;
     display: block;
     text-align: right;
 }
-.aaa img {
+.header__img {
     width: 100%;
 }
-.aaa .more_inf {
+.header__link {
     font-family: fantasy, cursive;
 }
 
 @media (max-width:768px) {
-.aaa { text-align: center;
+.header {
+    text-align: center;
+    }
 }
-}
-.centered-main-page-element {
+.main {
     display: block;
     width: 500px;
     margin: 0 auto 0;
 }
-.task {
+.task__input, .task__label {
     width: 56%;
     display: inline-block;
     flex-grow: 1
 }
-.task-row-wrapper {
+.task {
     display: flex;
 }
 ul {
@@ -44,7 +45,7 @@ li, h3 {
 input,button{
     outline:none;
 }
-button {
+.button {
     background: none;
     border: 0px;
     color: #888;
@@ -53,12 +54,11 @@ button {
     font-family: Lato, sans-serif;
     cursor: pointer;
 }
-button:hover {
-    color: #3a3A3a;
+.button:hover {
+    color: #3a3a3a;
 }
 /* Heading */
-h3,
-label[for="new-task"] {
+.form__title {
     color: #333;
     font-weight: 700;
     font-size: 15px;
@@ -66,34 +66,26 @@ label[for="new-task"] {
     padding: 30px 0 10px;
     margin: 0;
     text-transform: uppercase;
+    display: block;
 }
-input[type="text"] {
+.task__input {
     margin: 0;
     font-size: 18px;
     line-height: 18px;
     height: 21px;
     padding: 0 9px;
-    border: 1px solid #dDd;
-    background: #FFF;
+    border: 1px solid #ddd;
+    background: #fff;
     border-radius: 6px;
     font-family: Lato, sans-serif;
     color: #888;
 }
-input[type="text"]:focus {
+.task__input:focus {
     color: #333;
 }
 
-/* New Task */
-label[for="new-task"] {
-    display: block;
-    margin: 0 0 20px;
-}
-input#new-task {
-    width: 318px;
-}
-
 /* Task list */
-li {
+.task {
     overflow: hidden;
     padding: 20px 0;
     border-bottom: 1px solid #eee;
@@ -102,47 +94,58 @@ li {
     justify-content: space-between;
     align-items: center;
 }
-li > * {
+.task > * {
     vertical-align: middle;
 }
 
-li > input[type="checkbox"] {
+.task__checkbox {
     margin: 0 10px;
 }
-li > label {
+.task__label {
     padding-left: 10px;
     box-sizing: border-box;
     font-size: 18px;
     width: 226px;
 }
-li >    input[type="text"] {
+.task__input {
     width: 226px
 }
-button.delete img {
+.button__img{
     height: 2em;
     transform: rotateZ(45deg);
     transition: transform 200ms ease-in;
 }
-button.delete img:hover {
+.button__img:hover {
     transform: rotateZ(0);
 }
 
+/* New Task */
+.form__title_new-task {
+    margin: 0 0 20px;
+}
+.task__input_new-task{
+    width: 318px;
+}
+
 /* Completed */
-ul#completed-tasks label {
-    text-decoration: line-through
+.form_completed .task__label {
+    text-decoration: line-through;
     color: #888;
 }
 
 /* Edit Task */
-ul li input[type=text] {
+.task__input {
     display:none
 }
+.task__input_new-task{
+    display:inline-block;
+}
 
-ul li.editMode input[type=text] {
+.task_editMode .task__input {
     display:inline-block;
     width:224px
 }
 
-ul li.editMode label {
+.task_editMode .task__label {
     display:none;
 }
