--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@
 .task__input, .task__label {
   width: 56%;
   display: inline-block;
-  flex-grow: 1
+  flex-grow: 1;
 }
 .task {
   display: flex;
@@ -108,7 +108,7 @@ input,button{
   width: 226px;
 }
 .task__input {
-  width: 226px
+  width: 226px;
 }
 .button__img{
   height: 2em;
@@ -135,14 +135,14 @@ input,button{
 
 /* Edit Task */
 .task__input {
-  display: none
+  display: none;
 }
 .task__input_new-task{
   display: inline-block;
 }
 .task_editMode .task__input {
   display: inline-block;
-  width: 224px
+  width: 224px;
 }
 .task_editMode .task__label {
   display: none;
