fix: replace tags with semantic tags in HTML according to rule 1.1 in HTML & CSS. Advanced level.md

--- a/style.css
+++ b/style.css
@@ -129,6 +129,9 @@ button{
 .task__input_new-task{
   width: 318px;
 }
+.task_new-task{
+  border-bottom: none;
+}
 
 /* Completed */
 .form_completed .task__label {
